--- a/src/css/components/profile-card.css
+++ b/src/css/components/profile-card.css
@@ -476,11 +476,6 @@
 }
 
 @media (max-width: 768px) {
-  .pc-card {
-    /* height: 70svh;
-    max-height: 450px; */
-  }
-
   .pc-details {
     top: 2em;
   }
@@ -522,11 +517,6 @@
 }
 
 @media (max-width: 480px) {
-  .pc-card {
-    /* height: 60svh;
-    max-height: 380px; */
-  }
-
   .pc-details {
     top: 1.5em;
   }
