--- a/src/css/main.css
+++ b/src/css/main.css
@@ -321,6 +321,7 @@ img {
 .india-flag-text {
     background: linear-gradient(to right, #FF9933, #FFFFFF, #138808);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: 600;
     display: inline-block;
